--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
     </div>
     <div id="sharedBtns">
       <button id="btnLocalVideo">Start streaming</button>
+      <textarea id="logArea" rows="10" cols="50" readonly>Log Area:</textarea>
     </div>
     <footer>
         <script src="bundle.js"></script>
