--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
             <tbody>
                 <tr>
                     <td class="localColumn">
-                        <video id="localVideo" autoplay playsinline></video>
+                        <video id="localVideo" autoplay playsinline muted></video>
                     </td>
                     <td class="remoteColumn">
                         <div id="videoContainer"></div>
