--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,8 @@
     </div>
     <div id="sharedBtns">
       <button id="btnLocalVideo">Start streaming</button>
+      <button id="btnConsumeOnly">Tham gia phòng (chỉ xem)</button>
+      <br>
       <textarea id="logArea" rows="10" cols="50" readonly>Log Area:</textarea>
     </div>
     <footer>
